--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -8,9 +8,9 @@
     </div> 
     <table class="menu-item">
       <tr>
-        <td class="num">1.</td>
-        <td class="fdname">Grilled Pork</td>
-        <td class="price">$8.50</td>
+        <th class="num">1.</th>
+        <th class="fdname">Grilled Pork</th>
+        <th class="price">$8.50</th>
       </tr>
       <tr>
         <td></td>
@@ -19,9 +19,9 @@
     </table>
     <table class="menu-item">
       <tr>
-        <td class="num">2.</td>
-        <td class="fdname">Caribbean Roast</td>
-        <td class="price">$8.50</td>
+        <th class="num">2.</th>
+        <th class="fdname">Caribbean Roast</th>
+        <th class="price">$8.50</th>
       </tr>
       <tr>
         <td></td>   
@@ -30,9 +30,9 @@
     </table>
     <table class="menu-item">
         <tr>
-          <td class="num">3.</td>
-          <td class="fdname">Chicken Breast</td>
-          <td class="price">$8.50</td>
+          <th class="num">3.</th>
+          <th class="fdname">Chicken Breast</th>
+          <th class="price">$8.50</th>
         </tr>
         <tr>
           <td></td> 
@@ -41,9 +41,9 @@
       </table>
       <table class="menu-item">
         <tr>
-          <td class="num">4.</td>
-          <td class="fdname">Smokin' Thighs</td>
-          <td class="price">$8.50</td>
+          <th class="num">4.</th>
+          <th class="fdname">Smokin' Thighs</th>
+          <th class="price">$8.50</th>
         </tr>
         <tr>
           <td></td> 
@@ -52,9 +52,9 @@
       </table>
       <table class="menu-item">
         <tr>
-          <td class="num">5.</td>
-          <td class="fdname">Sauteed Prawns</td>
-          <td class="price">$8.95</td>
+          <th class="num">5.</th>
+          <th class="fdname">Sauteed Prawns</th>
+          <th class="price">$8.95</th>
         </tr>
         <tr>
           <td></td> 
@@ -63,9 +63,9 @@
       </table>
       <table class="menu-item">
         <tr>
-          <td class="num">6.</td>
-          <td class="fdname">Fish of the Day</td>
-          <td class="price">$8.95</td>
+          <th class="num">6.</th>
+          <th class="fdname">Fish of the Day</th>
+          <th class="price">$8.95</th>
         </tr>
         <tr>
           <td></td> 
@@ -74,9 +74,9 @@
       </table>
       <table class="menu-item">
         <tr>
-          <td class="num">7.</td>
-          <td class="fdname">Tofu Delight</td>
-          <td class="price">$8.50</td>
+          <th class="num">7.</th>
+          <th class="fdname">Tofu Delight</th>
+          <th class="price">$8.50</th>
         </tr>
         <tr>
           <td></td> 
@@ -85,9 +85,9 @@
       </table>
       <table class="menu-item">
         <tr>
-          <td class="num">8.</td>
-          <td class="fdname">Paseo Press</td>
-          <td class="price">$8.95</td>
+          <th class="num">8.</th>
+          <th class="fdname">Paseo Press</th>
+          <th class="price">$8.95</th>
         </tr>
         <tr>
           <td></td>
@@ -96,9 +96,9 @@
       </table>
       <table class="menu-item">
         <tr>
-          <td class="num">9.</td>
-          <td class="fdname">Ham and Cheese</td>
-          <td class="price">$7.50</td>
+          <th class="num">9.</th>
+          <th class="fdname">Ham and Cheese</th>
+          <th class="price">$7.50</th>
         </tr>
         <tr>
           <td></td> 
@@ -107,9 +107,9 @@
       </table>
       <table class="menu-item doubled">
         <tr>
-          <td class="num">10.</td>
-          <td class="fdname">Onion Obsession</td>
-          <td class="price">$6.00</td>
+          <th class="num">10.</th>
+          <th class="fdname">Onion Obsession</th>
+          <th class="price">$6.00</th>
         </tr>
         <tr>
           <td></td> 
@@ -118,9 +118,9 @@
       </table>
       <table class="menu-item doubled">
         <tr>
-          <td class="num">11.</td>
-          <td class="fdname">Seared Scallops</td>
-          <td class="price">$8.95</td>
+          <th class="num">11.</th>
+          <th class="fdname">Seared Scallops</th>
+          <th class="price">$8.95</th>
         </tr>
         <tr>  
           <td></td>
@@ -133,9 +133,9 @@
   
     <table class="menu-item doubled">
       <tr>
-        <td class="num">12.</td>
-        <td class="fdname">West Caribbean Bowl</td>
-        <td class="price">$12.00</td>
+        <th class="num">12.</th>
+        <th class="fdname">West Caribbean Bowl</th>
+        <th class="price">$12.00</th>
       </tr>
       <tr>
         <td></td>
@@ -145,9 +145,9 @@
     </table>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">13.</td>
-        <td class="fdname">Rice Bean Thigh Trio</td>
-        <td class="price">$8.00</td>
+        <th class="num">13.</th>
+        <th class="fdname">Rice Bean Thigh Trio</th>
+        <th class="price">$8.00</th>
       </tr>
       <tr>
         <td></td>
@@ -157,9 +157,9 @@
     </table>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">14.</td>
-        <td class="menu-fix"><span class="fdname">Paseo Greens</span><sup class="gf-vg"> GF / VG</sup></td>
-        <td class="price">$4.75</td>
+        <th class="num">14.</th>
+        <th class="menu-fix"><span class="fdname">Paseo Greens</span><sup class="gf-vg"> GF / VG</sup></th>
+        <th class="price">$4.75</th>
       </tr>
       <tr>
         <td></td>
@@ -173,9 +173,9 @@
     </table>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">15.</td>
-        <td class="menu-fix"><span class="fdname">Black Beans and Rice</span><sup class="gf-vg"> GF / VG</sup></td>
-        <td class="price">$5.50</td>
+        <th class="num">15.</th>
+        <th class="menu-fix"><span class="fdname">Black Beans and Rice</span><sup class="gf-vg"> GF / VG</sup></th>
+        <th class="price">$5.50</th>
       </tr>
       <tr>
         <td></td>
@@ -184,9 +184,9 @@
     </table>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">16.</td>
-        <td class="menu-fix"><span class="fdname">Rice, Beans and Salad</span><sup class="gf-vg"> GF / VG</sup></td>
-        <td class="price">$8.25</td>
+        <th class="num">16.</th>
+        <th class="menu-fix"><span class="fdname">Rice, Beans and Salad</span><sup class="gf-vg"> GF / VG</sup></th>
+        <th class="price">$8.25</th>
       </tr>
       <tr>
         <td></td>
@@ -199,9 +199,9 @@
   </div>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">17.</td>
-        <td class="fdname">Half Chicken Dinner</td>
-        <td class="price">$12.50</td>
+        <th class="num">17.</th>
+        <th class="fdname">Half Chicken Dinner</th>
+        <th class="price">$12.50</th>
       </tr>
       <tr>
         <td></td>
@@ -210,9 +210,9 @@
     </table>    
     <table class="menu-item doubled">
       <tr>
-        <td class="num">18.</td>
-        <td class="fdname">Caribbean Roast Dinner</td>
-        <td class="price">$12.50</td>
+        <th class="num">18.</th>
+        <th class="fdname">Caribbean Roast Dinner</th>
+        <th class="price">$12.50</th>
       </tr>
       <tr>
         <td></td>
@@ -222,9 +222,9 @@
     </table>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">19.</td>
-        <td class="fdname">Smokin' Thigh Dinner</td>
-        <td class="price">$12.50</td>
+        <th class="num">19.</th>
+        <th class="fdname">Smokin' Thigh Dinner</th>
+        <th class="price">$12.50</th>
       </tr>
       <tr>
         <td></td>
@@ -233,9 +233,9 @@
     </table>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">20.</td>
-        <td class="fdname">Chicken Breast Dinner</td>
-        <td class="price">$13.00</td>
+        <th class="num">20.</th>
+        <th class="fdname">Chicken Breast Dinner</th>
+        <th class="price">$13.00</th>
       </tr>
       <tr>
         <td></td>
@@ -244,9 +244,9 @@
     </table>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">21.</td>
-        <td class="fdname">Pork Loin Dinner</td>
-        <td class="price">$13.00</td>
+        <th class="num">21.</th>
+        <th class="fdname">Pork Loin Dinner</th>
+        <th class="price">$13.00</th>
       </tr>
       <tr>
         <td></td>
@@ -255,9 +255,9 @@
     </table>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">22.</td>
-        <td class="menu-fix"><span class="fdname">Caribbean Scallops Dinner</span><sup class="gf-vg">GF</sup></td>
-        <td class="price" id="too-long">$13.00</td>
+        <th class="num">22.</th>
+        <th class="menu-fix"><span class="fdname">Caribbean Scallops Dinner</span><sup class="gf-vg">GF</sup></th>
+        <th class="price" id="too-long">$13.00</th>
       </tr>
       <tr>
         <td></td>
@@ -266,10 +266,10 @@
     </table>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">23.</td>
-        <td class="menu-fix"><span class="fdname">Paseo Fish Dinner</span><sup class="gf-vg">GF</sup>
-        </td>
-        <td class="price">$13.00</td>
+        <th class="num">23.</th>
+        <th class="menu-fix"><span class="fdname">Paseo Fish Dinner</span><sup class="gf-vg">GF</sup>
+        </th>
+        <th class="price">$13.00</th>
       </tr>
       <tr>
         <td></td>
@@ -278,9 +278,9 @@
     </table>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">24.</td>
-        <td class="menu-fix"><span class="fdname">Paseo Prawn Dinner</span><sup class="gf-vg">GF</sup></td>
-        <td class="price">$13.00</td>
+        <th class="num">24.</th>
+        <th class="menu-fix"><span class="fdname">Paseo Prawn Dinner</span><sup class="gf-vg">GF</sup></th>
+        <th class="price">$13.00</th>
       </tr>
       <tr>
         <td></td>
@@ -289,9 +289,9 @@
     </table>
     <table class="menu-item doubled">
       <tr>
-        <td class="num">25.</td>
-        <td class="menu-fix"><span class="fdname">Tofu Con Gusto</span><sup class="gf-vg">GF / VG</sup></td>
-        <td class="price">$12.50</td>
+        <th class="num">25.</th>
+        <th class="menu-fix"><span class="fdname">Tofu Con Gusto</span><sup class="gf-vg">GF / VG</sup></th>
+        <th class="price">$12.50</th>
       </tr>
       <tr>
         <td></td>
