--- a/app/views/static_pages/ordering.html.erb
+++ b/app/views/static_pages/ordering.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="col-12 col-sm-6 col-sm-pull-6 col-lg-6 col-lg-pull-6">
 	<h4>Before Calling:</h4>
-	<ul id="ordering-info">
+	<ul class="ordering-info">
 		<li>Know what you want to order.</li>
 		<li>Check the location you are calling: Fremont or Ballard.</li>
 		<li>If the phone is busy, keep trying: There's only one phone and
@@ -16,11 +16,14 @@
 		Roast Sandwich" is preferred.</li>
 	</ul>
   <h4>When Arriving:</h4>
-  <ul id="ordering-info">
+  <ul class="ordering-info">
   	<li>If the line is long, skip it and come to the front, otherwise please wait.</li>
   	<li>Your order won't be called until paid for. Make sure we know you are here.</li>
   	<li>Remember we are cash only. Large orders have 10% gratuity added, but gratuity with every order is appreciated.</li>
   </ul>
 	<h4>Catering:</h4>
-	<p id="catering">Paseo offers catering for large groups or events. All items on the menu are available but please give at least 2 days notice prior to the date needed.   </p>
+
+  <ul class="ordering-info" id="catering">
+    <li>Paseo offers catering for large groups or events. All items on the menu are available but please give at least 2 days notice prior to the date needed.</li>
+  </ul>  
 </div>
