--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Menu') %>
-  
-    <div id="cash-only"><em>Cash Only Establishment</em></div>
+<div class="wrapper">  
+  <div id="cash-only"><em>Cash Only Establishment</em></div>
     <div class="menu-category ">
       <span class="menu-title">Sandwiches</span>
       <span class="description">
@@ -413,7 +413,7 @@
     </div>
   </div>
      <div id="cash-only"><em>Cash Only Establishment</em></div>    
-
+</div>
   
   
   
