--- a/app/views/static_pages/press.html.erb
+++ b/app/views/static_pages/press.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Press') %>
-	 <div id="cash-only"><em>Cash Only Establishment</em></div>
+<div class="wrapper">	
+	<div id="cash-only"><em>Cash Only Establishment</em></div>
 	<article class="press-top">
 		<h4>Esquire</h4>
 			<p class="description">
@@ -61,6 +62,6 @@
       	Link: <a href="http://blog.seattlepi.com/thebigblog/2012/09/11/seattles-20-best-sandwiches/#7298-1" target="_blank">Seattle's 20 best sandwiches</a>
 	</article>	
 	 <div id="cash-only"><em>Cash Only Establishment</em></div>	
-
+</div>
 
 
