--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,5 @@
 @import "twitter/bootstrap";
+
 /* UNIVERSAL */
 html {
   overflow-y: scroll;
@@ -9,6 +10,10 @@ body {
   padding-left: 0px !important;
   padding-right: 0px !important;
 
+}
+
+.wrapper  {
+  margin: 0px 15px !important;
 }
 
 /*#fd8779  #5e717a*/
@@ -25,7 +30,7 @@ body {
 }
 
 #main-text  {
-  margin-top: 6px !important;
+  margin-top: 4px !important;
 }
 
 .row  {
@@ -39,9 +44,9 @@ body {
 .text-box{
   text-align: left;
   background-color:#f4f6f7;
-  padding: 5px 13px 10px 13px;
+  padding: 5px 0px 10px 0px !important;
   opacity:0.94;
-  box-shadow: 0px 4px 2px 5px #f4f6f7;
+  box-shadow: 0px 2px 2px 3px #f4f6f7;
  
   /*
   box-shadow: 10px 0px 2px 0px #ffffff, -10px 0px 2px 0px #ffffff, 0px -0px 8px 4px #ffffff;
@@ -434,6 +439,11 @@ article{
 }
 
 /* ORDERING */
+
+.ordering-column  {
+  margin-top: 29px;
+}
+
 .ordering-info {
   list-style-type: circle;
   list-style-position: outside;
@@ -445,8 +455,16 @@ article{
   float: none;
 }
 
+#before-calling  {
+  margin-top: 0px;
+}
+
 #catering  {
   margin-bottom: 20px;
+}
+
+#cash-only-img  {
+  box-shadow: 2px 2px 6px 2px #7e8d94
 }
 
 /* Typography */
