--- a/app/views/static_pages/ordering.html.erb
+++ b/app/views/static_pages/ordering.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'Ordering') %>
   
-  <div class="col-12 col-sm-6 col-sm-push-6 col-lg-6 col-lg-push-6">
-  	<%=image_tag("IMG_84711.jpg", alt: "cash only photo", class:"img-responsive")%>
+  <div class="col-12 col-sm-6 col-sm-push-6 col-lg-6 col-lg-push-6 ordering-column">
+  	<%=image_tag("IMG_84711.jpg", alt: "cash only photo", class:"img-responsive", id:"cash-only-img")%>
   </div>
-  <div class="col-12 col-sm-6 col-sm-pull-6 col-lg-6 col-lg-pull-6">
-	<h4>Before Calling:</h4>
+  <div class="col-12 col-sm-6 col-sm-pull-6 col-lg-6 col-lg-pull-6 ordering-column">
+	<h4 id="before-calling">Before Calling:</h4>
 	<ul class="ordering-info">
 		<li>Know what you want to order.</li>
 		<li>Check the location you are calling: Fremont or Ballard.</li>
