--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,9 +9,9 @@
 
 	  <!-- Wrapper for slides -->
 	  <div class="carousel-inner">
-	     <div class="active item"><%=image_tag("IMG_1A.jpg", alt: "restaurant")%></div>
-		    <div class="item"><%=image_tag("IMG_2F1.jpg", alt: "Logo")%></div>
-		    <div class="item"><%=image_tag("IMG_3.jpg", alt: "Logo")%></div>
+	     <div class="active item"><%=image_tag("IMG_1A1.jpg", alt: "restaurant")%></div>
+		    <div class="item"><%=image_tag("IMG_1A2.jpg", alt: "Logo")%></div>
+		    <div class="item"><%=image_tag("IMG_1A3.jpg", alt: "Logo")%></div>
 	  </div>
 
 	  <!-- Controls -->
