playing with a new background

--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -298,11 +298,11 @@
         <td class="food-description">Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)</td>
       </tr>
     </table>     
-  <div class="menu-category loners">
+  <div class="menu-category" id="loners">
     <span class="menu-title">Loners</span>
     <span class="description"><br><em>All loners are served with a cup of Jasmine rice.</em><span>
   </div>
-    <table>
+    <table class="loners-sides">
       <tr class="side top-loner">
         <td></td>
         <td class="fdname">Grilled Chicken Breast</td>
@@ -349,10 +349,10 @@
         <td class="price">$5.75</td>
       </tr>  
     </table>      
-    <div class="menu-category sides">
+    <div class="menu-category" id="sides">
       <span class="menu-title">Sides</span>
     </div>
-      <table>
+      <table class="loners-sides">
         <tr class="side">
           <td></td>
           <td class="fdname">6oz / 12oz black beans</td>
