--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,19 +18,17 @@ body {
 
 /*#fd8779  #5e717a*/
 #backdrop {
-  background-color: #4c5d67;
   overflow: hidden;
-  /*
-  background: url(image_path('paseo12.jpg')) no-repeat center center fixed;
+  background: url(image_path('background.png')) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   width: 100%;
-  */
+
 }
 
 #main-text  {
-  margin-top: 4px !important;
+  margin-top: 5px !important;
 }
 
 .row  {
@@ -44,9 +42,9 @@ body {
 .text-box{
   text-align: left;
   background-color:#f4f6f7;
-  padding: 5px 0px 10px 0px !important;
+  padding: 0px 0px 10px 0px !important;
   opacity:0.94;
-  box-shadow: 0px 2px 2px 3px #f4f6f7;
+  box-shadow: 0px 1px 2px 3px #f4f6f7;
  
   /*
   box-shadow: 10px 0px 2px 0px #ffffff, -10px 0px 2px 0px #ffffff, 0px -0px 8px 4px #ffffff;
@@ -330,11 +328,15 @@ margin: 0px 0px 0px 0px;
   margin-bottom:25px;
 }
 
-.loners{
+.loners-sides  {
+  margin-left: 17px;
+}
+
+#loners{
   margin-bottom: 30px !important;
 }
 
-.sides {
+#sides {
   margin-bottom: 30px !important;
   margin-top: 10px !important; 
 }
