changing the background

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,7 +19,7 @@ body {
 /*#fd8779  #5e717a*/
 #backdrop {
   overflow: hidden;
-  background: url(image_path('background.png')) no-repeat center center fixed;
+  background: url(image_path('background1.png')) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
