--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,6 +5,7 @@
     	<ul class="foot-nav">
       		<li><%= link_to "Home",   root_path %></li>
       		<li><%= link_to "Menu",  menu_path %></li>
+          <li><%= link_to "Press", press_path %></li>
      	    <li><%= link_to "Ordering", ordering_path  %></li>
     	</ul>
     	</div>
