--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
 
   <div class="container">
   <div class = "navbar">
-        <ul class = "nav pull-right">
+        <ul class = "nav pull-center">
           <li class="<%= 'active' if current_page?(root_path)%>"><%= link_to "Home", root_path, class:"nav-link"%></li>
           
           <li class="<%= 'active' if current_page?(menu_path) %>"><%= link_to "Menu", menu_path, class:"nav-link" %></li>
