--- a/app/views/static_pages/ordering.html.erb
+++ b/app/views/static_pages/ordering.html.erb
@@ -19,7 +19,7 @@
   <ul class="ordering-info">
   	<li>If the line is long, skip it and come to the front, otherwise please wait.</li>
   	<li>Your order won't be called until paid for. Make sure we know you are here.</li>
-  	<li>Remember we are cash only. Large orders have 10% gratuity added, but gratuity with every order is appreciated.</li>
+  	<li>Remember, we are cash only. Large orders have 10% gratuity added, but gratuity with every order is appreciated.</li>
   </ul>
 	<h4>Catering:</h4>
 
