--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,18 @@
 <div class="row header">
     <div class="container" >
-      <div class="col-12 col-push-6 col-sm-4 col-sm-push-4 col-lg-4 col-lg-push-4 header-info">
-        <div style="text-align: center";>
-          <a href= "/" ><%=image_tag("logo.jpg", alt: "Logo", class:"img-responsive header-logo")%></a>
+      <div class="col-xs-12 col-xs-offset-2 col-sm-4 col-sm-push-4 col-md-4 col-md-push-4 col-lg-4 col-lg-push-4 header-info">
+        <div id="header-logo";>
+          <a href= "/" ><%=image_tag("logo-sm.jpg", alt: "Logo", class:"img-responsive", id:"header-img")%></a>
         </div>
       </div>
-      <div class ="col-6 col-pull-12 col-sm-3 col-sm-pull-4 col-sm-offset-1 col-lg-2 col-lg-offset-2 col-lg-pull-4" id="ballard">
+      <div class ="col-xs-6 col-sm-4 col-sm-pull-4 col-md-2 col-md-pull-4 col-md-offset-2 col-lg-2 col-lg-offset-2 col-lg-pull-4" id="fremont">
       <span id="location-name">Fremont</span><br>
       <span id="address">4225 Fremont Ave N<br>
       Seattle, WA 98103</span><br>
       <span id="phone">(206) 545-7440</span><br>
       <span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
     </div> 
-    <div class ="col-6 col-sm-3 col-lg-2" id="fremont">
+    <div class ="col-xs-6 col-sm-4 col-md-2 col-lg-2" id="ballard">
       <span id="location-name">Ballard</span><br>
       <span id="address">6226 Seaview Ave NW<br>
       Seattle, WA 98107</span><br>
@@ -23,7 +23,7 @@
 
   <div class="container">
   <div class = "navbar">
-        <ul class = "nav pull-center">
+        <ul class = "nav pull-right">
           <li class="<%= 'active' if current_page?(root_path)%>"><%= link_to "Home", root_path, class:"nav-link"%></li>
           
           <li class="<%= 'active' if current_page?(menu_path) %>"><%= link_to "Menu", menu_path, class:"nav-link" %></li>
