--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'Menu') %>
 <div class="wrapper">  
   <div id="cash-only"><em>Cash Only Establishment</em></div>
-    <div class="menu-category ">
+    <div class="menu-category category-w-description">
       <span class="menu-title">Sandwiches</span>
       <span class="description">
-      <br><em>All sandwiches are served on a toasted baguette, slathered with our signature aoli, fresh cilantro, pickled jalapenos, romaine lettuce and caramelized onions. Add garlic corn for $1.00</em></span>
+      <br><em>All sandwiches are served on a toasted baguette, slathered with our signature aoli, fresh cilantro, pickled jalapenos, romaine lettuce and caramelized onions. Add garlic corn for $1.00.</em></span>
     </div> 
     <table class="menu-item">
       <tr>
@@ -193,7 +193,7 @@
         <td class="food-description">Two scoops of Jasmine rice, a cup of black beans and Paseo Greens.</td>
       </tr>
     </table>  
-  <div class="menu-category">
+  <div class="menu-category category-w-description">
     <span class="menu-title">Entr&eacute;es</span>
     <span class="description"><br><em>All entr&eacute;es are served with Jasmine rice, black beans, Paseo Greens and garlic corn. Available all day.</em><span>
   </div>
@@ -298,7 +298,7 @@
         <td class="food-description">Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)</td>
       </tr>
     </table>     
-  <div class="menu-category" id="loners">
+  <div class="menu-category category-w-description" id="loners">
     <span class="menu-title">Loners</span>
     <span class="description"><br><em>All loners are served with a cup of Jasmine rice.</em><span>
   </div>
