--- a/app/views/static_pages/press.html.erb
+++ b/app/views/static_pages/press.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, 'Press') %>
-<div class="wrapper">	
+<div class="container">	
 	<div id="cash-only"><em>Cash Only Establishment</em></div>
+<div class="col-xs-12 col-md-6 col-lg-6" id="press-left">
+	<h2>In the News</h2>
 	<article class="press-top">
 		<h4>Esquire</h4>
 			<p class="description">
@@ -39,7 +41,10 @@
 				<a href="http://www.seattlemag.com/article/seattles-48-best-sandwiches-bucket-list" target="_blank">Seattle's 48 Best Sandwiches</a>
 			</p>
 	</article>
-	<article>
+</div>	
+<div class="col-xs-12 col-md-6 col-lg-6" id="press-right">
+<h2>Awards</h2>
+<article class="press-top">
 		<h4>Seattle Met</h4>
 		<p class="description">
 			On the <cite>Seattle Met's annual guide to top dining</cite> comes a list of <cite><em>Restaurants that capture the soul of Seattle</em></cite>, we're proud to be one of them.<br>
@@ -61,7 +66,11 @@
       	On <cite>the Seattle P-I's list of their top 20 sandwiches, Paseo ranked #1.<br>
       	Link: <a href="http://blog.seattlepi.com/thebigblog/2012/09/11/seattles-20-best-sandwiches/#7298-1" target="_blank">Seattle's 20 best sandwiches</a>
 	</article>	
-	 <div id="cash-only"><em>Cash Only Establishment</em></div>	
+	 
 </div>
+</div>
+<div id="cash-only"><em>Cash Only Establishment</em></div>
+		
+	
 
 
