--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
 
       <div class="col-xs-12 col-xs-offset-2 col-xs-offset-2 col-sm-4 col-sm-push-4 col-md-4 col-md-push-4 col-lg-4 col-lg-push-4 header-info">
         <div id="header-logo";>
-          <a href= "/" ><%=image_tag("logo-xs.jpg", alt: "Logo", class:"img-responsive", id:"header-img")%></a>
+          <a href= "/" ><%=image_tag("logo.jpg", alt: "Logo", class:"img-responsive", id:"header-img")%></a>
         </div>
       </div>
       <div class ="col-xs-6 col-sm-4 col-sm-pull-4 col-md-2 col-md-pull-4 col-md-offset-2 col-lg-2 col-lg-offset-2 col-lg-pull-4" id="fremont">
