--- a/app/views/static_pages/press.html.erb
+++ b/app/views/static_pages/press.html.erb
@@ -1,7 +1,14 @@
 <% provide(:title, 'Press') %>
-<div class="container">	
+
 	<div id="cash-only"><em>Cash Only Establishment</em></div>
-<div class="col-xs-12 col-md-6 col-lg-6" id="press-left">
+
+<div class="col-md-2">
+	<ul class="nav bs-sidenav">
+		<li class="active">Esquire</li>
+	</ul>
+
+</div>	
+<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5" id="press-left">
 	<h2>In the News</h2>
 	<article class="press-top">
 		<h4>Esquire</h4>
@@ -42,7 +49,7 @@
 			</p>
 	</article>
 </div>	
-<div class="col-xs-12 col-md-6 col-lg-6" id="press-right">
+<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5" id="press-right">
 <h2>Awards</h2>
 <article class="press-top">
 		<h4>Seattle Met</h4>
@@ -68,7 +75,7 @@
 	</article>	
 	 
 </div>
-</div>
+
 <div id="cash-only"><em>Cash Only Establishment</em></div>
 		
 	
