--- a/app/views/static_pages/press.html.erb
+++ b/app/views/static_pages/press.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Press') %>
-
+<div class="row">
 	<div id="cash-only"><em>Cash Only Establishment</em></div>
 
 <div class="col-md-2">
@@ -74,10 +74,8 @@
       	Link: <a href="http://blog.seattlepi.com/thebigblog/2012/09/11/seattles-20-best-sandwiches/#7298-1" target="_blank">Seattle's 20 best sandwiches</a>
 	</article>	
 	 
+</div>		
 </div>
-
-<div id="cash-only"><em>Cash Only Establishment</em></div>
-		
-	
+<div id="cash-only"><em>Cash Only Establishment</em></div>	
 
 
