--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -361,7 +361,7 @@
         <tr class="side">
           <td></td>
           <td class="fdname">6oz / 12oz Jasmine rice</td>
-          <td class="price">$1.50 / 2.50</td>
+          <td class="price" id="jas-too-long">$1.50 / 2.50</td>
         </tr>
         <tr class="side">
           <td></td>
