--- a/app/views/static_pages/ordering.html.erb
+++ b/app/views/static_pages/ordering.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'Ordering') %>
   
-  <div class="col-12 col-sm-6 col-sm-push-6 col-lg-6 col-lg-push-6 ordering-column">
+  <div class="col-xs-12 col-sm-6 col-sm-push-6 col-lg-6 col-lg-push-6 ordering-column">
   	<%=image_tag("IMG_84711.jpg", alt: "cash only photo", class:"img-responsive", id:"cash-only-img")%>
   </div>
-  <div class="col-12 col-sm-6 col-sm-pull-6 col-lg-6 col-lg-pull-6 ordering-column">
+  <div class="col-xs-12 col-sm-6 col-sm-pull-6 col-lg-6 col-lg-pull-6 ordering-column">
 	<h4 id="before-calling">Before Calling:</h4>
 	<ul class="ordering-info">
 		<li>Know what you want to order.</li>
