--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,22 +1,28 @@
 <footer class="footer">
-	<div class="container">
 	  <div class="row">
-		<div class="bottom-menu">
-    	<ul class="foot-nav">
-      		<li><%= link_to "Home",   root_path %></li>
-      		<li><%= link_to "Menu",  menu_path %></li>
+      <div class="col-sm-12 col-xs-12 col-md-10 col-lg-8 center">
+      <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" id="developer-info">
+          Website by: <a id="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a>
+      </div> 
+           <div class="col-xs-12 col-xs-push-4 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-sm-push-3 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1" id="footer-margfix">
+       <ul class="foot-nav">
+          <li><%= link_to "Home",   root_path %></li>
+          <li><%= link_to "Menu",  menu_path %></li>
           <li><%= link_to "Press", press_path %></li>
-     	    <li><%= link_to "Ordering", ordering_path  %></li>
-    	</ul>
-    	</div>
+          <li><%= link_to "Ordering", ordering_path  %></li>
+       </ul>
       </div>
-      <div class="row">	
-    	<div class="copyright">
-	  		&copy;2013 Paseo Caribbean<br>
-	  		Website by <a id="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a>
-	  	</div>
-	  </div>	
+
+      <div class="col-xs-4 col-xs-pull-12 col-sm-2 col-sm-pull-5 col-sm-offset-1 col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1">
+        <div class="copyright">
+        &copy;2013 Paseo
+        </div>
+      </div>
+ 
+    </div>
+    	
+      </div>
+	 	
       	 
- 	</div>
 </footer>
 
