--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="row header">
-    <div class="container" >
+    <div class="container">
 
       <div class="col-xs-12 col-xs-offset-2 col-xs-offset-2 col-sm-4 col-sm-push-4 col-md-4 col-md-push-4 col-lg-4 col-lg-push-4 header-info">
         <div id="header-logo";>
@@ -20,10 +20,9 @@
       <span id="phone">(206) 789-3100</span><br><span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
     </div>
  </div> 
- <div class="col-12 col-lg-12 navbar-container">    
-
-  <div class="container">
-  <div class = "navbar">
+ <div class="navbar-container">
+    <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 center" id="nav-col">    
+      <div class = "navbar">
         <ul class = "nav pull-right">
           <li class="<%= 'active' if current_page?(root_path)%>"><%= link_to "Home", root_path, class:"nav-link"%></li>
           
@@ -34,7 +33,6 @@
           <li class="<%= 'active' if current_page?(ordering_path) %>"><%= link_to "Ordering", ordering_path, class:"nav-link"%></li>
         </ul> 
      </div> 
- <!-- end of container-->
-  </div>  
-  </div>    
+    </div><!-- end of col--> 
+  </div><!-- end of navbar-container to keep width 100%-->   
 </div>   
