--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  m=s.getElementsByTagNamgit pe(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-43170225-1', 'paseoseattle.com');
@@ -24,7 +24,9 @@
 <body>
       <%= render 'layouts/header' %>
       <div class="row" id="backdrop">     
+
         <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 text-box center" id="main-text"> 
+          
           <%= yield %>
           <div class="container">
           <%= render 'layouts/connect' %>
