--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,7 @@
 <footer class="footer">
 	  <div class="row">
-      <div class="col-sm-12 col-xs-12 col-md-10 col-lg-8 center">
-      <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" id="developer-info">
-          Website by: <a id="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a>
-      </div> 
-           <div class="col-xs-12 col-xs-push-4 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-sm-push-3 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1" id="footer-margfix">
+      <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 center">
+      <div class="col-xs-12 col-sm-5 col-sm-offset-7 col-md-4 col-md-offset-8 col-lg-5 col-lg-offset-7" id="footer-margfix pull-right">
        <ul class="foot-nav">
           <li><%= link_to "Home",   root_path %></li>
           <li><%= link_to "Menu",  menu_path %></li>
@@ -12,15 +9,22 @@
           <li><%= link_to "Ordering", ordering_path  %></li>
        </ul>
       </div>
+    </div>
+  </div>  
+    <div class="row" id="row-footer-2">
+      <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 center">
+      <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4" id="developer-info">
+          Website by: <a id="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a>
+      </div> 
+           
 
-      <div class="col-xs-4 col-xs-pull-12 col-sm-2 col-sm-pull-5 col-sm-offset-1 col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1">
+      <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4 ">
         <div class="copyright">
-        &copy;2013 Paseo
+        &copy;2013 Paseo Caribbean
         </div>
       </div>
  
     </div>
-    	
       </div>
 	 	
       	 
