dont know what this will do

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,7 +21,7 @@ body {
   overflow: hidden;
   background-color: #5e717a;
 /*#fd8779  */
-  background: url(image_path('background2.png')) no-repeat center center fixed;
+  background: url(image_path('aribbean1.jpg')) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
