--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,7 +21,7 @@ body {
   overflow: hidden;
   background-color: #5e717a;
 /*#fd8779  */
-  background: url(image_path('aribbean1.jpg')) no-repeat center center fixed;
+  background: url(image_path('aribbeanb.jpg')) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -95,7 +95,7 @@ a.nav-link  {
   text-shadow: none!important;
   font-weight: none;
     &:hover {
-      background-color:#5e717a  !important;
+      background-color:#4c5d67  !important;
     }
     &:active {
       color: #16994b !important;
@@ -105,7 +105,7 @@ a.nav-link  {
 
 .navbar .nav > .active > a {
   color: #1bbb5c !important;
-  background-color: #5e717a !important;
+  background-color: #4c5d67 !important;
 }
 
 .navbar-container  {
@@ -135,6 +135,7 @@ a.nav-link  {
 /*FOOTER#fd8779*/
 
 .footer {
+  color: #333f45;
   background-color: #ef80b3;
   font-size: 110%;
   height: 70px; 
@@ -157,6 +158,7 @@ footer.footer li{
 
 ul.foot-nav a  {
   color: white !important;
+  box-shadow: 0px 0px 7px 3px #ef80b3;
 }
 
 .foot-nav  {
@@ -166,17 +168,26 @@ ul.foot-nav a  {
 }
 
 .copyright  {
-  color: graydark;
+  color: #333f45;
   text-align: center;
   margin-bottom: 10px;
+
 }
+
+
+/*
+.footer-text-box  {
+  color: #1bbb5c;
+  background-color: #4c5d67;
+  box-shadow: 0px 0px 7px 3px #ef80b3;
+  opacity: .8;
+  padding: 2px 5px;
+  border-radius: 2px;
+}
+*/
 
 #personal-logo  {
   color: white !important;
-}
-
-div.copyright a  {
-  color: white;
 }
 
 #footer-margfix  {
