--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -14,13 +14,15 @@
     <div class="row" id="row-footer-2">
       <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 center">
       <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4" id="developer-info">
-          Website by: <a id="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a>
+          <span class="footer-text-box">Website by: <a id="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a></span>
       </div> 
            
 
       <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4 ">
         <div class="copyright">
+          <span class="footer-text-box">
         &copy;2013 Paseo Caribbean
+        </span>
         </div>
       </div>
  
