--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -138,14 +138,16 @@ a.nav-link  {
   color: #333f45;
   background-color: #ef80b3;
   font-size: 110%;
-  height: 70px; 
+  height: 40px; 
   position: relative;
   box-shadow: 0px -3px 4px #7e8d94;      
 }
 
 #developer-info  {
+  padding-top: 10px;
   padding-left: 0px !important;
   margin-bottom:10px;
+  float:left;
 }
 
 #row-footer-2  {
@@ -168,8 +170,11 @@ ul.foot-nav a  {
 }
 
 .copyright  {
+  float: right;
   color: #333f45;
-  text-align: center;
+  margin-top: -20px;
+  padding-right:10px;
+  text-align: right;
   margin-bottom: 10px;
 
 }
