--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,34 +1,13 @@
 <footer class="footer">
-	  <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 center">
-      <div class="col-xs-12 col-sm-5 col-sm-offset-7 col-md-5 col-md-offset-7 col-lg-5 col-lg-offset-7" id="footer-margfix pull-right">
+     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-8 center">
+      <div id="developer-info">Website by: <a id="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a></div>
        <ul class="foot-nav">
           <li><%= link_to "Home",   root_path %></li>
           <li><%= link_to "Menu",  menu_path %></li>
           <li><%= link_to "Press", press_path %></li>
           <li><%= link_to "Ordering", ordering_path  %></li>
        </ul>
-      </div>
+     </div>
     </div>
-  </div>  
-    <div class="row" id="row-footer-2">
-      <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 center">
-      <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4" id="developer-info">
-          <span class="footer-text-box">Website by: <a id="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a></span>
-      </div> 
-           
-
-      <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4 ">
-        <div class="copyright">
-          <span class="footer-text-box">
-        &copy;2013 Paseo Caribbean
-        </span>
-        </div>
-      </div>
- 
-    </div>
-      </div>
-	 	
-      	 
 </footer>
 
