--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,8 +2,8 @@
 	  <div class="row">
       <div class="col-sm-12 col-xs-12 col-md-10 col-lg-8 center">
       <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" id="developer-info">
-          Website by: <a id="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a>
-      </div> 
+          Website by: <a id="personal-logo" href="www.andrebautista.com" target="_blank">Andre Bautista</a>
+      </div>
            <div class="col-xs-12 col-xs-push-4 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-sm-push-3 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1" id="footer-margfix">
        <ul class="foot-nav">
           <li><%= link_to "Home",   root_path %></li>
@@ -18,11 +18,11 @@
         &copy;2013 Paseo
         </div>
       </div>
- 
+
     </div>
-    	
+
       </div>
-	 	
-      	 
+
+
 </footer>
 
