--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -83,7 +83,7 @@ a  {
 
 ul {
   float: left;
-  list-style: none; 
+  list-style: none;
   li {
     float: left;
     margin-left: 0px;
@@ -100,7 +100,7 @@ a.nav-link  {
     &:active {
       color: #16994b !important;
       background-color: #4c5d67 !important;
-    } 
+    }
 }
 
 .navbar .nav > .active > a {
@@ -111,16 +111,16 @@ a.nav-link  {
 .navbar-container  {
   padding-left: 0px !important;
   padding-right: 0px !important;
-  background-color:#ef80b3; 
-  margin-left: 0px !important; 
-  margin-right: 0px !important; 
- 
-  box-shadow: 0px -2px 5px #7e8d94, 0px 2px 2px #7e8d94; 
+  background-color:#ef80b3;
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+
+  box-shadow: 0px -2px 5px #7e8d94, 0px 2px 2px #7e8d94;
 }
 
 .navbar{
   min-height: 0px !important;
-  background-color: #ef80b3 !important; 
+  background-color: #ef80b3 !important;
   background-image: none;
   margin:0 auto 0px auto;
   border: none !important;
@@ -138,9 +138,9 @@ a.nav-link  {
   color: #333f45;
   background-color: #ef80b3;
   font-size: 110%;
-  height: 40px; 
+  height: 40px;
   position: relative;
-  box-shadow: 0px -3px 4px #7e8d94;      
+  box-shadow: 0px -3px 4px #7e8d94;
 }
 
 #developer-info  {
@@ -151,7 +151,7 @@ a.nav-link  {
 }
 
 #row-footer-2  {
-  
+
 }
 
 footer.footer li{
@@ -165,7 +165,7 @@ ul.foot-nav a  {
 
 .foot-nav  {
   float: right;
-  padding-top: 10px; 
+  padding-top: 10px;
   padding-left: 0px;
 }
 
@@ -202,13 +202,13 @@ ul.foot-nav a  {
 /*CONNECT BAR*/
 
 #connect-center  {
-padding-bottom: 0px;  
+padding-bottom: 0px;
 padding-top: 0px;
 }
 
 .connect-section  {
   margin-top: 5px;
- 
+
 }
 
 div.connect-center a  {
@@ -216,9 +216,9 @@ div.connect-center a  {
 }
 
 #connect-center {
-float:left; 
-width:100%; 
-display: block; 
+float:left;
+width:100%;
+display: block;
 text-align: center;
 margin-bottom: 0px;
 }
@@ -263,23 +263,27 @@ margin: 0px 0px 0px 0px;
   text-align: center;
 }
 
-#location-name  {
+.location-name  {
   font-size: 1.1em;
   text-align: left;
   font-weight: bold;
 }
 
-#address  {
+.address  {
   color: #660000;
   font-size: .8em;
   line-height: .1em;
 }
 
-#phone  {
+.phone  {
   font-size: .8em;
 }
 
-#hours  {
+.phone a {
+
+}
+
+.hours  {
   font-size: .8em;
 }
 
@@ -288,7 +292,7 @@ margin: 0px 0px 0px 0px;
 #cash-only  {
   color:#768b95;
   font-size:1.2em;
-  text-align: center;  
+  text-align: center;
   padding-top: 5px;
 }
 
@@ -347,7 +351,7 @@ margin: 0px 0px 0px 0px;
 
 #sides {
   margin-bottom: 30px !important;
-  margin-top: 10px !important; 
+  margin-top: 10px !important;
 }
 
 tr.side > td {
@@ -357,7 +361,7 @@ tr.side > td {
 
   /* Makes the price align to the left of the title with superscript*/
 .menu-fix  {
-  float:left;  
+  float:left;
 }
 
 th  {
@@ -422,7 +426,7 @@ th  {
 }
 
 /* double digit menu items; align them with singles */
-.doubled  {  
+.doubled  {
   margin-left: -10px;
 }
 
@@ -433,8 +437,8 @@ th  {
 /* PRESS */
 
 #press-left  {
-    
-    
+
+
 }
 
 #press-row  {
@@ -450,8 +454,8 @@ th  {
 
 #press-right  {
 
- 
-  
+
+
 }
 
 article{
@@ -459,7 +463,7 @@ article{
   padding-bottom: 10px;
   border-top: dotted;
   border-top-width: 1px;
-  
+
   border-color: #16994b;
 }
 
