--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
     <div class="col-sm-12 col-xs-12 col-md-10 col-lg-8 center">
       <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" id="developer-info">
-          Website by: <a id="personal-logo" href="www.andrebautista.com" target="_blank">Andre Bautista</a>
+          Website by: <a id="personal-logo" href="http://www.andrebautista.com" target="_blank">Andre Bautista</a>
       </div>
       <div class="col-xs-12 col-xs-push-4 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-sm-push-3 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1" id="footer-margfix">
         <ul class="foot-nav">
