--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,32 +7,32 @@
         </div>
       </div>
       <div class ="col-xs-6 col-sm-4 col-sm-pull-4 col-md-2 col-md-pull-4 col-md-offset-2 col-lg-2 col-lg-offset-2 col-lg-pull-4" id="fremont">
-      <span id="location-name">Fremont</span><br>
-      <span id="address">4225 Fremont Ave N<br>
+      <span class="location-name">Fremont</span><br>
+      <span class="address">4225 Fremont Ave N<br>
       Seattle, WA 98103</span><br>
-      <span id="phone"><a href="tel://206 545 7440">(206) 545-7440</a></span><br>
-      <span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
-    </div> 
-    <div class ="col-xs-6 col-sm-4 col-md-2 col-lg-2" id="ballard">
-      <span id="location-name">Ballard</span><br>
-      <span id="address">6226 Seaview Ave NW<br>
-      Seattle, WA 98107</span><br>
-      <span id="phone">(206) 789-3100</span><br><span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
+      <span class="phone"><a href="tel://206 545 7440">(206) 545-7440</a></span><br>
+      <span class="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span>
     </div>
- </div> 
+    <div class ="col-xs-6 col-sm-4 col-md-2 col-lg-2" id="ballard">
+      <span class="location-name">Ballard</span><br>
+      <span class="address">6226 Seaview Ave NW<br>
+      Seattle, WA 98107</span><br>
+      <span class="phone"><a href="tel://206 789 3100">(206) 789-3100</a></span><br><span class="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span>
+    </div>
+ </div>
  <div class="navbar-container">
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-8 center" id="nav-col">    
+    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-8 center" id="nav-col">
       <div class = "navbar">
         <ul class = "nav pull-right">
           <li class="<%= 'active' if current_page?(root_path)%>"><%= link_to "Home", root_path, class:"nav-link"%></li>
-          
+
           <li class="<%= 'active' if current_page?(menu_path) %>"><%= link_to "Menu", menu_path, class:"nav-link" %></li>
-          
+
           <li class="<%= 'active' if current_page?(press_path) %>"><%= link_to "Press", press_path, class:"nav-link" %></li>
-          
+
           <li class="<%= 'active' if current_page?(ordering_path) %>"><%= link_to "Ordering", ordering_path, class:"nav-link"%></li>
-        </ul> 
-     </div> 
-    </div><!-- end of col--> 
-  </div><!-- end of navbar-container to keep width 100%-->   
-</div>   
+        </ul>
+     </div>
+    </div><!-- end of col-->
+  </div><!-- end of navbar-container to keep width 100%-->
+</div>
