forgot closing span tags

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,14 +9,14 @@
       <div class ="col-xs-6 col-sm-4 col-sm-pull-4 col-md-2 col-md-pull-4 col-md-offset-2 col-lg-2 col-lg-offset-2 col-lg-pull-4" id="fremont">
       <div class="location-name">Fremont</div><br>
       <div class="address">4225 Fremont Ave N<br>
-      Seattle, WA 98103</span><br>
-      <span class="phone"><a href="tel://206 545 7440">(206) 545-7440</a></span><br>
-      <span class="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span>
+      Seattle, WA 98103</div><br>
+      <div class="phone"><a href="tel://206 545 7440">(206) 545-7440</a></div><br>
+      <digv class="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</div>
     </div>
     <div class ="col-xs-6 col-sm-4 col-md-2 col-lg-2" id="ballard">
       <div class="location-name">Ballard</div><br>
       <div class="address">6226 Seaview Ave NW<br>
-      Seattle, WA 98107</span><br>
+      Seattle, WA 98107</div><br>
       <div class="phone"><a href="tel://206 789 3100">(206) 789-3100</a></div><br><div class="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</div>
     </div>
  </div>
